small update; nothing much.
just added a new headers [branch: pi]

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 <h3>All our code is on github on the account @colepz <a href="https://github.com/ColePZ/">ColePZ Github</a></h3>
 <h3>@haxxomega - 	Alan Pazoid <a href="https://github.com/haxxomega/">haxxomega Github</a></h3>
 <h3>please tell your friends or your mates about our web</h3>
-
+<h3>remember to check out the other tabs of our website</h3>
 
 
 
