--- a/home.html
+++ b/home.html
@@ -27,8 +27,7 @@
 <h3>@haxxomega - 	Alan Pazoid <a href="https://github.com/haxxomega/">haxxomega Github</a></h3>
 <h3>please tell your friends or your mates about our web</h3>
 <h3>remember to check out the other tabs of our website</h3>
-
-
+<h3>sorry our grammar isnt great</h3>
 
 
 
