--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 <h3><b><a href="home.html">Home</a>
 <a href="html-help.html">HTML Help</a></b></h3>
 <center><h1>Welcome to our website</h1>
-<h1>This website was made by a brilliant minded duo of yr7 coders NOT NERDS!</h1>
+<h1>This website was made by a brilliant minded duo of yr7 coders. NOT NERDS!</h1>
 <h3>We learnt to code on w3schools.com</h3>
 <h3>The Two Coders of this website:</h3>
 <h3>Cole Pazoid - ZidderX</h3>
@@ -25,9 +25,10 @@
 <h3>This website is 100% HTML & CSS</h3>
 <h3>All our code is on github on the account @colepz <a href="https://github.com/ColePZ/">ColePZ Github</a></h3>
 <h3>@haxxomega - 	Alan Pazoid <a href="https://github.com/haxxomega/">haxxomega Github</a></h3>
-<h3>please tell your friends or your mates about our web</h3>
-<h3>remember to check out the other tabs of our website</h3>
-<h3>sorry our grammar isnt great</h3>
+<h3>Please tell your friends or your mates about our website</h3>
+<h3>Remember to check out the other tabs of our website</h3>
+<h3>Sorry our grammar isnt great</h3>
+<h3>On the other tabs, you can learn coding such as JavaScript, HTML, CSS, Python and many many more!</h3>
 
 
 
