--- a/html-help.html
+++ b/html-help.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
-<!-- Title -->
+<!-- How to use html -->
 
 <title>codeorgisbad.com #SARCASAM</title>
 </head>
@@ -11,7 +11,7 @@
 <h3>HTML stands for hyper text markup language</h3>
 <h3>You can use "p" tags to make a line</h3>
 <p>This is a paragraph tag</p>
-
+  <p>If you want to make a paragraph you would type (<p>Whatever you are typing for the paragraph<p>)</p>
 
 
 
