--- a/html-help.html
+++ b/html-help.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="styles.css">
 <!-- Title -->
 
-<title>codeorgisbad.com #SARCASAM</title>
+<title>LearnToCode | Learn HTML!</title>
 </head>
 <body>
 <center>
